--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.be6c3549.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2d07c4be.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9693c0db.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4fb07d20.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.716dfc69.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.4e75345a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.65fac467.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.99ed59ee.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.564ec589.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.cf21eb89.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.dfe00172.js">
@@ -61,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_19oilkt = {
+					__sveltekit_1ityy9g = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -70,10 +70,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.be6c3549.js"),
-						import("./_app/immutable/entry/app.716dfc69.js")
+						import("./_app/immutable/entry/start.2d07c4be.js"),
+						import("./_app/immutable/entry/app.99ed59ee.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_19oilkt.element, {
+						kit.start(app, __sveltekit_1ityy9g.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
