--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bd476058.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4e2644ed.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e5d6889d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7f704eb5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3d3e5658.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.062c6eaa.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.873b3220.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.93ea38b3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.47b7418f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.5c686c6d.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.dfe00172.js">
@@ -61,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_xdzqfx = {
+					__sveltekit_1thvbki = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -70,10 +70,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bd476058.js"),
-						import("./_app/immutable/entry/app.3d3e5658.js")
+						import("./_app/immutable/entry/start.4e2644ed.js"),
+						import("./_app/immutable/entry/app.93ea38b3.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_xdzqfx.element, {
+						kit.start(app, __sveltekit_1thvbki.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
