--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4e2644ed.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3c2c06d9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7f704eb5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a9807292.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.93ea38b3.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.47b7418f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.5c686c6d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5740fc53.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.d595557d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.c14acfba.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.dfe00172.js">
@@ -28,8 +28,7 @@
 
 	<nav class="svelte-1u9z1tp"><svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L1,2 C1.5,3 1.5,3 2,3 L2,0 Z" class="svelte-1u9z1tp"></path></svg>
 		<ul class="svelte-1u9z1tp"><li aria-current="page" class="svelte-1u9z1tp"><a href="/" class="svelte-1u9z1tp">Home</a></li>
-			<li class="svelte-1u9z1tp"><a href="/about" class="svelte-1u9z1tp">About</a></li>
-			</ul>
+			<li class="svelte-1u9z1tp"><a href="/about" class="svelte-1u9z1tp">About</a></li></ul>
 		<svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L0,3 C0.5,3 0.5,3 1,2 L2,0 Z" class="svelte-1u9z1tp"></path></svg></nav>
 
 	<div class="corner svelte-1u9z1tp"><a href="https://github.com/sveltejs/kit" class="svelte-1u9z1tp"><img src="/_app/immutable/assets/github.1ea8d62e.svg" alt="GitHub" class="svelte-1u9z1tp"></a></div>
@@ -61,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_1thvbki = {
+					__sveltekit_124qumu = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -70,10 +69,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4e2644ed.js"),
-						import("./_app/immutable/entry/app.93ea38b3.js")
+						import("./_app/immutable/entry/start.3c2c06d9.js"),
+						import("./_app/immutable/entry/app.5740fc53.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1thvbki.element, {
+						kit.start(app, __sveltekit_124qumu.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
