--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3c2c06d9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.44a19461.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a9807292.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2e22f6d9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5740fc53.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.d595557d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.c14acfba.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.cbdfc7f2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.579be517.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.cf7e56ed.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.dfe00172.js">
@@ -60,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_124qumu = {
+					__sveltekit_iv1ita = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -69,10 +69,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3c2c06d9.js"),
-						import("./_app/immutable/entry/app.5740fc53.js")
+						import("./_app/immutable/entry/start.44a19461.js"),
+						import("./_app/immutable/entry/app.cbdfc7f2.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_124qumu.element, {
+						kit.start(app, __sveltekit_iv1ita.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
