--- a/index.html
+++ b/index.html
@@ -2,42 +2,42 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="./svelte-test/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.44a19461.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2e22f6d9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cbdfc7f2.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.579be517.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.cf7e56ed.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.984db11e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.dfe00172.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.ts.9c5eea7e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page.da46b06b.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
+		<link href="./svelte-test/_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
+		<link href="./svelte-test/_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/start.bbf3ec27.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/index.b185f133.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/singletons.bd502183.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/index.5c549051.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/app.a45195b9.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/_layout.svelte.c0f7f0c4.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/stores.4ade368d.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/_layout.ts.984db11e.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/_page.svelte.dfe00172.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/_page.ts.9c5eea7e.js">
+		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/_page.da46b06b.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<div class="app svelte-8o1gnw"><header class="svelte-1u9z1tp"><div class="corner svelte-1u9z1tp"><a href="https://kit.svelte.dev" class="svelte-1u9z1tp"><img src="/_app/immutable/assets/svelte-logo.87df40b8.svg" alt="SvelteKit" class="svelte-1u9z1tp"></a></div>
+<div class="app svelte-8o1gnw"><header class="svelte-1u9z1tp"><div class="corner svelte-1u9z1tp"><a href="https://kit.svelte.dev" class="svelte-1u9z1tp"><img src="/svelte-test/_app/immutable/assets/svelte-logo.87df40b8.svg" alt="SvelteKit" class="svelte-1u9z1tp"></a></div>
 
 	<nav class="svelte-1u9z1tp"><svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L1,2 C1.5,3 1.5,3 2,3 L2,0 Z" class="svelte-1u9z1tp"></path></svg>
-		<ul class="svelte-1u9z1tp"><li aria-current="page" class="svelte-1u9z1tp"><a href="/" class="svelte-1u9z1tp">Home</a></li>
-			<li class="svelte-1u9z1tp"><a href="/about" class="svelte-1u9z1tp">About</a></li></ul>
+		<ul class="svelte-1u9z1tp"><li class="svelte-1u9z1tp"><a href="/svelte-test/" class="svelte-1u9z1tp">Home</a></li>
+			<li class="svelte-1u9z1tp"><a href="/svelte-test/about" class="svelte-1u9z1tp">About</a></li></ul>
 		<svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L0,3 C0.5,3 0.5,3 1,2 L2,0 Z" class="svelte-1u9z1tp"></path></svg></nav>
 
-	<div class="corner svelte-1u9z1tp"><a href="https://github.com/sveltejs/kit" class="svelte-1u9z1tp"><img src="/_app/immutable/assets/github.1ea8d62e.svg" alt="GitHub" class="svelte-1u9z1tp"></a></div>
+	<div class="corner svelte-1u9z1tp"><a href="https://github.com/sveltejs/kit" class="svelte-1u9z1tp"><img src="/svelte-test/_app/immutable/assets/github.1ea8d62e.svg" alt="GitHub" class="svelte-1u9z1tp"></a></div>
 </header>
 
 	<main class="svelte-8o1gnw">
 
-<section class="svelte-19xx0bt"><h1 class="svelte-19xx0bt"><span class="welcome svelte-19xx0bt"><picture><source srcset="/_app/immutable/assets/svelte-welcome.c18bcf5a.webp" type="image/webp">
-				<img src="/_app/immutable/assets/svelte-welcome.6c300099.png" alt="Welcome" class="svelte-19xx0bt"></picture></span>
+<section class="svelte-19xx0bt"><h1 class="svelte-19xx0bt"><span class="welcome svelte-19xx0bt"><picture><source srcset="/svelte-test/_app/immutable/assets/svelte-welcome.c18bcf5a.webp" type="image/webp">
+				<img src="/svelte-test/_app/immutable/assets/svelte-welcome.6c300099.png" alt="Welcome" class="svelte-19xx0bt"></picture></span>
 
 		to your new<br>SvelteKit app
 	</h1>
@@ -60,19 +60,20 @@
 			
 			<script>
 				{
-					__sveltekit_iv1ita = {
+					__sveltekit_13kxwaa = {
 						env: {},
-						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/svelte-test",
+						base: new URL("./svelte-test", location).pathname,
 						element: document.currentScript.parentElement
 					};
 
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.44a19461.js"),
-						import("./_app/immutable/entry/app.cbdfc7f2.js")
+						import("./svelte-test/_app/immutable/entry/start.bbf3ec27.js"),
+						import("./svelte-test/_app/immutable/entry/app.a45195b9.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_iv1ita.element, {
+						kit.start(app, __sveltekit_13kxwaa.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
