--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./svelte-test/favicon.png" />
+		<link rel="icon" href="/svelte-test/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./svelte-test/_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
-		<link href="./svelte-test/_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/start.bbf3ec27.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/singletons.bd502183.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/app.a45195b9.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/_layout.svelte.c0f7f0c4.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/stores.4ade368d.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/_layout.ts.984db11e.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/_page.svelte.dfe00172.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/entry/_page.ts.9c5eea7e.js">
-		<link rel="modulepreload" href="./svelte-test/_app/immutable/chunks/_page.da46b06b.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
+		<link href="/svelte-test/_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
+		<link href="/svelte-test/_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.0d842a22.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.b185f133.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.f7a6b7bf.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.5c549051.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.25ad63fd.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.965304db.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.f02e66c3.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.ts.984db11e.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_page.svelte.dfe00172.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_page.ts.9c5eea7e.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/_page.da46b06b.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -60,20 +60,20 @@
 			
 			<script>
 				{
-					__sveltekit_13kxwaa = {
+					__sveltekit_a28kbe = {
 						env: {},
 						assets: "/svelte-test",
-						base: new URL("./svelte-test", location).pathname,
+						base: "/svelte-test",
 						element: document.currentScript.parentElement
 					};
 
 					const data = [null,null];
 
 					Promise.all([
-						import("./svelte-test/_app/immutable/entry/start.bbf3ec27.js"),
-						import("./svelte-test/_app/immutable/entry/app.a45195b9.js")
+						import("/svelte-test/_app/immutable/entry/start.0d842a22.js"),
+						import("/svelte-test/_app/immutable/entry/app.25ad63fd.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_13kxwaa.element, {
+						kit.start(app, __sveltekit_a28kbe.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
