--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="/svelte-test/_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
 		<link href="/svelte-test/_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.dd0521a8.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.5e3e66fb.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.cbd81ef6.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.37eb7024.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.bd33eb2f.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.4e23ad55.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.fb7f2752.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.bb35437a.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.aa223c56.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.bd07143e.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_page.svelte.dfe00172.js">
@@ -60,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_126l594 = {
+					__sveltekit_1epvk0k = {
 						env: {},
 						assets: "/svelte-test",
 						base: "/svelte-test",
@@ -70,10 +70,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/svelte-test/_app/immutable/entry/start.dd0521a8.js"),
-						import("/svelte-test/_app/immutable/entry/app.bd33eb2f.js")
+						import("/svelte-test/_app/immutable/entry/start.5e3e66fb.js"),
+						import("/svelte-test/_app/immutable/entry/app.bb35437a.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_126l594.element, {
+						kit.start(app, __sveltekit_1epvk0k.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
