--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="/svelte-test/_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
 		<link href="/svelte-test/_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.f6dfbd28.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.8d46f1c3.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.b49b5f00.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.0c877b2b.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.fbb547dc.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.b6783420.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.dcaef6c7.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.885a18c2.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.148b8418.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.c6093563.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_page.svelte.dfe00172.js">
@@ -60,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_tereny = {
+					__sveltekit_wfyi1e = {
 						env: {},
 						assets: "/svelte-test",
 						base: "/svelte-test",
@@ -70,10 +70,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/svelte-test/_app/immutable/entry/start.f6dfbd28.js"),
-						import("/svelte-test/_app/immutable/entry/app.fbb547dc.js")
+						import("/svelte-test/_app/immutable/entry/start.8d46f1c3.js"),
+						import("/svelte-test/_app/immutable/entry/app.885a18c2.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_tereny.element, {
+						kit.start(app, __sveltekit_wfyi1e.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
