--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="/svelte-test/_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
 		<link href="/svelte-test/_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.535fb44b.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.c707b22e.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.1d5099ac.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.14cdaeb4.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.673055ac.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.aa8df5e3.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.34dee9a6.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.4b3bd2f0.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.4436047b.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.5acb0c96.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_page.svelte.dfe00172.js">
@@ -27,7 +27,8 @@
 <div class="app svelte-8o1gnw"><header class="svelte-1u9z1tp"><div class="corner svelte-1u9z1tp"><a href="https://kit.svelte.dev" class="svelte-1u9z1tp"><img src="/svelte-test/_app/immutable/assets/svelte-logo.87df40b8.svg" alt="SvelteKit" class="svelte-1u9z1tp"></a></div>
 
 	<nav class="svelte-1u9z1tp"><svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L1,2 C1.5,3 1.5,3 2,3 L2,0 Z" class="svelte-1u9z1tp"></path></svg>
-		<ul class="svelte-1u9z1tp"><li class="svelte-1u9z1tp"><a href="/svelte-test/" class="svelte-1u9z1tp">Home</a></li>
+		<ul class="svelte-1u9z1tp"><li class="svelte-1u9z1tp">undefined
+				<a href="/svelte-test/" class="svelte-1u9z1tp">Home</a></li>
 			<li class="svelte-1u9z1tp"><a href="/svelte-test/about" class="svelte-1u9z1tp">About</a></li></ul>
 		<svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L0,3 C0.5,3 0.5,3 1,2 L2,0 Z" class="svelte-1u9z1tp"></path></svg></nav>
 
@@ -60,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_1g8twbi = {
+					__sveltekit_n5fub7 = {
 						env: {},
 						assets: "/svelte-test",
 						base: "/svelte-test",
@@ -70,10 +71,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/svelte-test/_app/immutable/entry/start.535fb44b.js"),
-						import("/svelte-test/_app/immutable/entry/app.673055ac.js")
+						import("/svelte-test/_app/immutable/entry/start.c707b22e.js"),
+						import("/svelte-test/_app/immutable/entry/app.4b3bd2f0.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1g8twbi.element, {
+						kit.start(app, __sveltekit_n5fub7.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
