--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="/svelte-test/_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
 		<link href="/svelte-test/_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.48966123.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.d09f2b53.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.57c57e3c.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.93d6e289.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.35d61b9d.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.8c1dccae.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.41fbaf1d.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.3d6dc703.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.c5e499b3.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.8528c6e8.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_page.svelte.dfe00172.js">
@@ -60,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_xxoyph = {
+					__sveltekit_98elb = {
 						env: {},
 						assets: "/svelte-test",
 						base: "/svelte-test",
@@ -70,10 +70,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/svelte-test/_app/immutable/entry/start.48966123.js"),
-						import("/svelte-test/_app/immutable/entry/app.35d61b9d.js")
+						import("/svelte-test/_app/immutable/entry/start.d09f2b53.js"),
+						import("/svelte-test/_app/immutable/entry/app.3d6dc703.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_xxoyph.element, {
+						kit.start(app, __sveltekit_98elb.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
