--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="/svelte-test/_app/immutable/assets/_layout.fa9427ff.css" rel="stylesheet">
 		<link href="/svelte-test/_app/immutable/assets/_page.265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.d09f2b53.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.b185f133.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.93d6e289.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.5c549051.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.3d6dc703.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.c5e499b3.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.8528c6e8.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/start.189af4b0.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.af796089.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/singletons.5d3638af.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/index.fea36444.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/app.887deddf.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.svelte.3e3af6b5.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/stores.c246b619.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_page.svelte.dfe00172.js">
+		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_page.svelte.c4d3495a.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/entry/_page.ts.9c5eea7e.js">
 		<link rel="modulepreload" href="/svelte-test/_app/immutable/chunks/_page.da46b06b.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
 	</head>
@@ -60,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_98elb = {
+					__sveltekit_160qwws = {
 						env: {},
 						assets: "/svelte-test",
 						base: "/svelte-test",
@@ -70,10 +70,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/svelte-test/_app/immutable/entry/start.d09f2b53.js"),
-						import("/svelte-test/_app/immutable/entry/app.3d6dc703.js")
+						import("/svelte-test/_app/immutable/entry/start.189af4b0.js"),
+						import("/svelte-test/_app/immutable/entry/app.887deddf.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_98elb.element, {
+						kit.start(app, __sveltekit_160qwws.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
